// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricTileRenderer snapshot (T-0009-131) — expressive×health matches snapshot at expressive×health 1`] = `
<View
  accessibilityLabel="42, Tasks completed"
  accessibilityRole="text"
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "padding": 12,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        accessibilityElementsHidden={true}
        adjustsFontSizeToFit={true}
        minimumFontScale={0.5}
        numberOfLines={1}
        style={
          {
            "color": "#1A1715",
            "fontSize": 28,
            "fontWeight": "500",
            "lineHeight": 36,
          }
        }
      >
        42
      </Text>
    </View>
    <Svg
      accessibilityElementsHidden={true}
      height={40}
      width={80}
    >
      <Polyline
        fill="none"
        points="0.0,40.0 16.0,26.7 32.0,33.3 48.0,13.3 64.0,20.0 80.0,0.0"
        stroke="#4A7438"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={1.5}
      />
    </Svg>
  </View>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#6B5F56",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
        "marginTop": 2,
      }
    }
  >
    Tasks completed
  </Text>
</View>
`;

exports[`MetricTileRenderer snapshot (T-0009-131) — productive×focus matches snapshot at productive×focus 1`] = `
<View
  accessibilityLabel="42, Tasks completed"
  accessibilityRole="text"
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "padding": 12,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        accessibilityElementsHidden={true}
        adjustsFontSizeToFit={true}
        minimumFontScale={0.5}
        numberOfLines={1}
        style={
          {
            "color": "#14171A",
            "fontSize": 24,
            "fontWeight": "600",
            "lineHeight": 30,
          }
        }
      >
        42
      </Text>
    </View>
    <Svg
      accessibilityElementsHidden={true}
      height={40}
      width={80}
    >
      <Polyline
        fill="none"
        points="0.0,40.0 16.0,26.7 32.0,33.3 48.0,13.3 64.0,20.0 80.0,0.0"
        stroke="#4F46E5"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={1.5}
      />
    </Svg>
  </View>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#5C6470",
        "fontSize": 13,
        "fontWeight": "400",
        "lineHeight": 18,
        "marginTop": 2,
      }
    }
  >
    Tasks completed
  </Text>
</View>
`;
